upgrade stack to latest version